force-app/main/default/objects/sma__MATerritoryRollupComponent__c/sma__MATerritoryRollupComponent__c.object-meta.xml
<CustomObject>
    <label>MapAnything Territory Rollup Component</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MapAnything Territory Rollup Components</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>