force-app/main/default/objects/sma__MATerritoryRollupComponent__c/fields/sma__BaseObject__c.field-meta.xml
<CustomField>
    <fullName>sma__BaseObject__c</fullName>
    <label>Base Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>