force-app/main/default/objects/sma__MATerritoryRollupComponent__c/fields/sma__CrossField__c.field-meta.xml
<CustomField>
    <fullName>sma__CrossField__c</fullName>
    <label>Cross Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>