force-app/main/default/objects/sma__MATerritoryRollupComponent__c/fields/sma__CrossObject__c.field-meta.xml
<CustomField>
    <fullName>sma__CrossObject__c</fullName>
    <label>Cross Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>