force-app/main/default/objects/sma__MATerritoryRollupComponent__c/fields/sma__Parent__c.field-meta.xml
<CustomField>
    <fullName>sma__Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>sma__MATerritoryRollupComponent__c</referenceTo>
    <relationshipLabel>Children</relationshipLabel>
    <relationshipName>Children</relationshipName>
    <type>Lookup</type>
</CustomField>