force-app/main/default/objects/sma__MATerritoryRollupComponent__c/fields/sma__Type__c.field-meta.xml
<CustomField>
    <fullName>sma__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Filter</fullName>
                <default>true</default>
                <label>Filter</label>
            </value>
            <value>
                <fullName>Cross Filter</fullName>
            </value>
            <value>
                <fullName>Subfilter</fullName>
            </value>
            <value>
                <fullName>Activity Subfilter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>