force-app/main/default/objects/sma__MATerritoryRollupComponent__c/fields/sma__Value2__c.field-meta.xml
<CustomField>
    <fullName>sma__Value2__c</fullName>
    <label>Value2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>